--- a/index.html
+++ b/index.html
@@ -255,7 +255,7 @@
                                     Unlock the power of words with Ecliniqs’ personalized therapy services. Whether you're a child learning to speak or an adult overcoming communication challenges, we're here to help.
                                 </p>
                                 <div class="button mt-40 wow fadeInUp"  data-wow-delay="1200ms" data-wow-duration="400ms">
-                                    <a class="btn btn-md btn-gradient animation" href="contact-us.html">Get Started</a>
+                                    <a class="btn btn-md btn-gradient animation" href="about-us.html">Get Started</a>
                                 </div>
                             </div>
                         </div>
@@ -295,13 +295,13 @@
                 <div class="col-xl-4 col-lg-6 col-md-6 mb-30">
                     <div class="services-style-one">
                         <img src="assets/img/icon/1.png" alt="Icon">
-                        <a href="#" class="btn-arrow">
+                        <a href="https://form.typeform.com/to/JvWslP44" class="btn-arrow">
                             <i class="fas fa-long-arrow-right"></i>
                         </a>
                         <p>
                             Continued at up zealously necessary breakfast. Surrounded sir motionless she end literature. Gay direction neglected but supported yet melancho themselves.
                         </p>
-                        <h4><a href="#">Online Speech Therapy for Children</a></h4>
+                        <h4><a href="https://form.typeform.com/to/JvWslP44">Online Speech Therapy for Children</a></h4>
                     </div>
                 </div>
                 <!-- End Single Item -->
@@ -309,13 +309,13 @@
                 <div class="col-xl-4 col-lg-6 col-md-6 mb-30">
                     <div class="services-style-one">
                         <img src="assets/img/icon/2.png" alt="Icon">
-                        <a href="#" class="btn-arrow">
+                        <a href="https://form.typeform.com/to/JvWslP44" class="btn-arrow">
                             <i class="fas fa-long-arrow-right"></i>
                         </a>
                         <p>
                             Continued at up zealously necessary breakfast. Surrounded sir motionless she end literature. Gay direction neglected but supported yet melancho themselves.
                         </p>
-                        <h4><a href="#">Online Speech Therapy for Adults</a></h4>
+                        <h4><a href="https://form.typeform.com/to/JvWslP44">Online Speech Therapy for Adults</a></h4>
                     </div>
                 </div>
                 <!-- End Single Item -->
@@ -323,13 +323,13 @@
                 <div class="col-xl-4 col-lg-6 col-md-6 mb-30">
                     <div class="services-style-one">
                         <img src="assets/img/icon/3.png" alt="Icon">
-                        <a href="#" class="btn-arrow">
+                        <a href="https://form.typeform.com/to/JvWslP44" class="btn-arrow">
                             <i class="fas fa-long-arrow-right"></i>
                         </a>
                         <p>
                             Continued at up zealously necessary breakfast. Surrounded sir motionless she end literature. Gay direction neglected but supported yet melancho themselves.
                         </p>
-                        <h4><a href="#">Family Counselling program</a></h4>
+                        <h4><a href="https://form.typeform.com/to/JvWslP44">Family Counselling program</a></h4>
                     </div>
                 </div>
                 <!-- End Single Item -->
