--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="description" content="Dilabs - Creative Digital Agency Template">
+    <meta name="description" content="Ecliniqs - Online Speech Therapy">
 
     <!-- ========== Page Title ========== -->
     <title>Ecliniqs - Online Speech Therapy</title>
