--- a/index.html
+++ b/index.html
@@ -7,6 +7,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ecliniqs - Online Speech Therapy">
+    <script type="module" src="https://widget.molin.ai/shop-ai.js?w=jk1vbysd"></script>
+
 
     <!-- ========== Page Title ========== -->
     <title>Ecliniqs - Online Speech Therapy</title>
