--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="assets/img/logosvg.svg" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -81,7 +81,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
 
-                    <img src="assets/img/logo.png" alt="Logo">
+                    <img src="assets/img/logosvg.svg" alt="Logo">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                         <i class="fa fa-times"></i>
                     </button>
@@ -257,7 +257,7 @@
                                     Unlock the power of words with Ecliniqs’ personalized therapy services. Whether you're a child learning to speak or an adult overcoming communication challenges, we're here to help.
                                 </p>
                                 <div class="button mt-40 wow fadeInUp"  data-wow-delay="1200ms" data-wow-duration="400ms">
-                                    <a class="btn btn-md btn-gradient animation" href="about-us.html">Get Started</a>
+                                    <a class="btn btn-md btn-gradient animation" href="about-us.html"> About Us</a>
                                 </div>
                             </div>
                         </div>
