--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
 
+
+<!-- ========== Chaty Widget ========== -->
+    <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=9ezuEWri"></script>
+
     <!-- ========== Start Stylesheet ========== -->
     <link href="assets/css/bootstrap.min.css" rel="stylesheet">
     <link href="assets/css/font-awesome.min.css" rel="stylesheet">
