--- a/child-services.html
+++ b/child-services.html
@@ -71,7 +71,7 @@
                         <i class="fa fa-bars"></i>
                     </button>
                     <a class="navbar-brand" href="index.html">
-                        <img src="assets/img/logo.png" class="logo" alt="Logo">
+                        <img src="assets/img/logosvg.svg" class="logo" alt="Logo">
                     </a>
                 </div>
                 <!-- End Header Navigation -->
@@ -79,7 +79,7 @@
                 <!-- Collect the nav links, forms, and other content for toggling -->
                 <div class="collapse navbar-collapse" id="navbar-menu">
 
-                    <img src="assets/img/logo.png" alt="Logo">
+                    <img src="assets/img/logosvg.svg" alt="Logo">
                     <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#navbar-menu">
                         <i class="fa fa-times"></i>
                     </button>
@@ -503,7 +503,7 @@
                             <img src="assets/img/shape/6.png" alt="Image Not Found">
                         </div>
                         <div class="f-item about pr-50 pr-xs-0 pr-md-0">
-                            <img class="logo" src="assets/img/logo-light.png" alt="Logo">
+                            <img class="logo" src="assets/img/logosvgdark.svg" alt="Logo">
                             <p>
                                 Unlock the power of words with Ecliniqs’ personalized therapy services. Whether you're a child learning to speak or an adult overcoming communication challenges, we're here to help.                            </p>
                             <div class="footer-social mt-30">
