--- a/404.html
+++ b/404.html
@@ -30,6 +30,9 @@
     <link href="style.css" rel="stylesheet">
     <!-- ========== End Stylesheet ========== -->
 
+    <!-- ========== Chaty Widget ========== -->
+    <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=9ezuEWri"></script>
+
     <!--[if lte IE 9]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
