--- a/adult-services.html
+++ b/adult-services.html
@@ -30,6 +30,9 @@
     <link href="style.css" rel="stylesheet">
     <!-- ========== End Stylesheet ========== -->
 
+    <!-- ========== Chaty Widget ========== -->
+    <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=9ezuEWri"></script>
+
     <!--[if lte IE 9]>
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
@@ -309,10 +312,10 @@
 
                         <div class="project-details mt-40">
                             
-                            <h2>Comprehensive Pediatric Communication Therapy</h2>
+                            <h2>Comprehensive Adult Therapy</h2>
                             <p>
-                                At our dedicated children’s therapy center, we focus on fostering the development of essential communication skills in young clients. Our services include personalized assessments and therapy for speech disorders, language delays, and swallowing issues. We are committed to creating a supportive environment where children receive the specialized care they need to thrive.
-                                                        </p>
+                                At our dedicated adult therapy center, we focus on enhancing essential communication skills for individuals facing speech, language, or swallowing challenges. Our services include personalized assessments and targeted therapy for speech disorders, language difficulties, and swallowing issues. We are committed to creating a supportive environment where adults receive the specialized care they need to communicate effectively and improve their quality of life.
+                            </p>
                             <ul class="check-list mb-30">
                                 <li>
                                     <h3 id="apraxia">Apraxia (Adult)</h3>
@@ -407,7 +410,7 @@
                                 <li>
                                     <h3 id="dys">Dysphagia</h3>
                                     <div class="project-style-one">
-                                        <img src="assets/img/800x950voice.png" alt="Thumb">
+                                        <img src="assets/img/800x950dysp.png" alt="Thumb">
                                     </div>
                                     </br>
                                     <p>
