--- a/child-services.html
+++ b/child-services.html
@@ -34,6 +34,10 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
 
+
+        <!-- ========== Chaty Widget ========== -->
+    <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=9ezuEWri"></script>
+    
 </head>
 
 <body>
