--- a/about-us.html
+++ b/about-us.html
@@ -34,6 +34,9 @@
         <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
     <![endif]-->
 
+    <!-- ========== Chaty Widget ========== -->
+    <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=9ezuEWri"></script>
+
 </head>
 
 <body>
@@ -137,6 +140,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="adult-services.html">Adult Services</a></li>
                                 <li><a href="child-services.html">Children Services</a></li>
+                                <li><a href="familycounselling.html">Family Counseling</a></li>
                                 
                             </ul>
                         </li>
@@ -284,17 +288,15 @@
                             <!-- <a class="btn-round-animation" href="#">Learn More <i class="fas fa-arrow-right"></i></a> -->
                             <ul class="list-info-item">
                                 <li>
-                                    <h4><a href="#">Speech Therapy <i class="fas fa-angle-right"></i></a></h4>
+                                    <h4><a href="child-services.html">Child Services <i class="fas fa-angle-right"></i></a></h4>
                                 </li>
                                 <li>
-                                    <h4><a href="#">Rehabilitation Programs <i class="fas fa-angle-right"></i></a></h4>
+                                    <h4><a href="adult-services.html">Adult Services <i class="fas fa-angle-right"></i></a></h4>
                                 </li>
                                 <li>
-                                    <h4><a href="#">Personalized Care <i class="fas fa-angle-right"></i></a></h4>
+                                    <h4><a href="familycounselling.html">family Counselling <i class="fas fa-angle-right"></i></a></h4>
                                 </li>
-                                <li>
-                                    <h4><a href="#">Holistic Solutions <i class="fas fa-angle-right"></i></a></h4>
-                                </li>
+                                
                             </ul>
                         </div>
                     </div>
@@ -566,7 +568,7 @@
                             <img src="assets/img/shape/6.png" alt="Image Not Found">
                         </div>
                         <div class="f-item about pr-50 pr-xs-0 pr-md-0">
-                            <img class="logo" src="assets/img/logo-light.png" alt="Logo">
+                            <img class="logo" src="assets/img/logosvgdark.svg" alt="Logo">
                             <p>
                                 Unlock the power of words with Ecliniqs’ personalized therapy services. Whether you're a child learning to speak or an adult overcoming communication challenges, we're here to help.                            </p>
                             <div class="footer-social mt-30">
