--- a/adult-services.html
+++ b/adult-services.html
@@ -140,6 +140,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="adult-services.html">Adult Services</a></li>
                                 <li><a href="child-services.html">Children Services</a></li>
+                                <li><a href="familycounselling.html">Family Counseling</a></li>
                                 
                             </ul>
                         </li>
@@ -586,7 +587,7 @@
                             <img src="assets/img/shape/6.png" alt="Image Not Found">
                         </div>
                         <div class="f-item about pr-50 pr-xs-0 pr-md-0">
-                            <img class="logo" src="assets/img/logo-light.png" alt="Logo">
+                            <img class="logo" src="assets/img/logosvgdark.svg" alt="Logo">
                             <p>
                                 Unlock the power of words with Ecliniqs’ personalized therapy services. Whether you're a child learning to speak or an adult overcoming communication challenges, we're here to help.                            </p>
                             <div class="footer-social mt-30">
