--- a/child-services.html
+++ b/child-services.html
@@ -37,7 +37,7 @@
 
         <!-- ========== Chaty Widget ========== -->
     <script id="pixel-chaty" async="true" src="https://cdn.chaty.app/pixel.js?id=9ezuEWri"></script>
-    
+
 </head>
 
 <body>
@@ -141,6 +141,7 @@
                             <ul class="dropdown-menu">
                                 <li><a href="adult-services.html">Adult Services</a></li>
                                 <li><a href="child-services.html">Children Services</a></li>
+                                <li><a href="familycounselling.html">Family Counseling</a></li>
                                 
                             </ul>
                         </li>
