--- a/index.html
+++ b/index.html
@@ -306,7 +306,7 @@
                             <i class="fas fa-long-arrow-right"></i>
                         </a>
                         <p>
-                            Continued at up zealously necessary breakfast. Surrounded sir motionless she end literature. Gay direction neglected but supported yet melancho themselves.
+                            Engaging, interactive speech therapy to help kids improve articulation, fluency, and communication skills.
                         </p>
                         <h4><a href="https://form.typeform.com/to/JvWslP44">Online Speech Therapy for Children</a></h4>
                     </div>
@@ -320,7 +320,7 @@
                             <i class="fas fa-long-arrow-right"></i>
                         </a>
                         <p>
-                            Continued at up zealously necessary breakfast. Surrounded sir motionless she end literature. Gay direction neglected but supported yet melancho themselves.
+                            Therapy for speech clarity, cognitive-communication, and swallowing, aiding recovery from conditions like stroke or brain injury.
                         </p>
                         <h4><a href="https://form.typeform.com/to/JvWslP44">Online Speech Therapy for Adults</a></h4>
                     </div>
@@ -334,8 +334,7 @@
                             <i class="fas fa-long-arrow-right"></i>
                         </a>
                         <p>
-                            Continued at up zealously necessary breakfast. Surrounded sir motionless she end literature. Gay direction neglected but supported yet melancho themselves.
-                        </p>
+                            Counseling support to foster a supportive home environment, empowering families to assist loved ones in their progress.
                         <h4><a href="https://form.typeform.com/to/JvWslP44">Family Counselling program</a></h4>
                     </div>
                 </div>
