--- a/index.html
+++ b/index.html
@@ -259,16 +259,7 @@
                             <div class="information">
                                 <h2 class="wow fadeInUp" data-wow-delay="500ms" data-wow-duration="400ms">Online Speech  <strong>Therapy</strong></h2>
                                 <p class="wow fadeInUp"  data-wow-delay="900ms" data-wow-duration="400ms">
-                                    About Us
-At Ecliniqs, we are dedicated to providing exceptional speech therapy services for both adults and children. Our team of highly skilled and compassionate speech-language pathologists is committed to helping individuals of all ages achieve their communication goals and improve their quality of life.
-Our Vision 
-To empower individuals of all ages to communicate confidently and effectively.
-Our Mission
-Our mission is to deliver personalized and compassionate speech therapy services that cater to the unique needs of each client. We strive to empower individuals through:
-•	Individualized Care: We understand that every person’s communication needs are different. Our therapists create customized therapy plans tailored to each client’s specific challenges and goals.
-•	Evidence-Based Practices: We utilize the latest research and proven techniques in speech-language pathology to ensure the most effective and efficient therapy.
-•	Holistic Approach: We consider the whole person, including their emotional and social well-being, to provide comprehensive support that addresses all aspects of communication.
-•	Empowerment and Education: We believe in educating our clients and their families about speech and language development to foster independence and long-term success.
+                                    Unlock the power of words with Ecliniqs’ personalized therapy services. Whether you're a child learning to speak or an adult overcoming communication challenges, we're here to help.
                                 </p>
                                 <div class="button mt-40 wow fadeInUp"  data-wow-delay="1200ms" data-wow-duration="400ms">
                                     <a class="btn btn-md btn-gradient animation" href="about-us.html"> About Us</a>
