--- a/404.html
+++ b/404.html
@@ -9,7 +9,7 @@
     <meta name="description" content="Dilabs - Creative Digital Agency Template">
 
     <!-- ========== Page Title ========== -->
-    <title>Dilabs - Creative Digital Agency Template</title>
+    <title>Ecliniqs</title>
 
     <!-- ========== Favicon Icon ========== -->
     <link rel="shortcut icon" href="assets/img/favicon.png" type="image/x-icon">
