--- a/index.html
+++ b/index.html
@@ -148,6 +148,7 @@
                             </ul>
                         </li>
                         <li><a href="contact-us.html">contact us</a></li>
+                        <li><a href="https://blog.ecliniqs.com/">Blogs</a></li>
                     </ul>
                 </div><!-- /.navbar-collapse -->
 
