--- a/contact-us.html
+++ b/contact-us.html
@@ -7,7 +7,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <meta name="description" content="Ecliniqs - Online Speech Therapy">
-    <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=ZKxRPcwppzAW"></script>
+    <script id="chatway" async="true" src="https://cdn.chatway.app/widget.js?id=cWE0q2TD2AU2"></script>
 
     <!-- ========== Page Title ========== -->
     <title>Ecliniqs - Contact</title>
